Added about content to homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,3 +91,9 @@ nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
 .home-btn-color:hover {
   background-color: #D063A5;
 }
+
+.company-image {
+  width: 60%;
+  margin: auto;
+  display: block;
+}
