--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,9 +9,16 @@
 	<%= render 'shared/carousel' %>
 
 	<h5 class='center-align'>What's In The Box</h5>
-	<p class='center-align'>Get four deluxe clothing samples and a lifestyle product, all tailored to your personal profile, for our low monthly price.</p>
+	<p class='center-align'>Get four deluxe clothing samples and a surprise gift, all tailored to your personal profile, for our low monthly price.</p>
 	<div class='center-align'>
 	<%= link_to "Get Started", new_user_registration_path, class: 'home-btn-color btn waves-effect waves-light' %>
 	</div>
 	<br>
+	<br>
+	<br>
+	<div class="test1">
+		<h5 class='center-align'>About</h5>
+		<%= image_tag("company1.jpg", class: 'company-image') %>
+		<p class='center-align'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
 </div>
