--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -12,7 +12,7 @@
           <% end %>
           <li><a href="register">Subscribe</a></li>
         </ul>
-        <ul id="mobile-out" class="side-nav">
+        <ul class="side-nav" id="mobile-out">
         <% if !user_signed_in? %>
           <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
@@ -26,8 +26,8 @@
 
       <div class="container nav-content">
         <ul class="tabs tabs-transparent hide-on-small-only">
-          <li class="tab"><a class="active?" href="#test1">What's Inside</a></li>
-          <li class="tab"><a class="active?" href="#test2">Customize</a></li>
+          <li class="tab"><%= link_to "What's Inside", :anchor => "test1" %></li>
+          <li class="tab"><a class="" href="#test2">Customize</a></li>
           <li class="tab"><a class="active?" href="#test4">About</a></li>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="small material-icons">shopping_cart</i></a>
         </ul>
