--- a/app/views/shared/_nav_foot.html.erb
+++ b/app/views/shared/_nav_foot.html.erb
@@ -1,3 +1,5 @@
+<div class="main">
+
 <footer class="page-footer">
   <div class="container">
     <div class="row">
@@ -30,3 +32,5 @@
     </div>
   </div>
 </footer>
+
+</div>
