Fixed greeter to only show on what's inside tab

--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -15,6 +15,7 @@
         <ul class="side-nav" id="mobile-out">
         <% if !user_signed_in? %>
           <li><%= link_to "Login", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <% end %>
           <li><a href="register">Subscribe</a></li>
           <li><a href="#">Cart</a></li>
