--- a/app/views/shared/_nav_foot.html.erb
+++ b/app/views/shared/_nav_foot.html.erb
@@ -19,7 +19,7 @@
   <div class="footer-copyright">
     <div class="container">
       <div class="row">
-        © <%= Date.today.year %> All rights reserved
+        © <%= Date.today.year %> GeekfulThinking
           <ul class="right">
             <li><%= link_fa_to 'facebook-official fa-2x', '', 'http://www.facebook.com' %></li>
             <li><%= link_fa_to 'twitter fa-2x', '', 'http://www.twitter.com' %></li>
