--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,63 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+ <div class='container'>
+ <br>
+ <br>
+ <br>
+   <div class='card blue-grey darken-1'>
+    <div class="card-content white-text">
+      <div class='row'>
+        <div class='col s8'>
+          <h4>Change Password</h4>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+            <div class="input-field col s11">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true %>
+            </div>
+
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
+
+            <div class="input-field col s11">
+                <%= f.label :new_password %>
+                <% if @minimum_password_length %> 
+                (<%= @minimum_password_length %> characters minimum)
+                <% end %>
+                <%= f.password_field :password, autocomplete: "off" %>
+
+            </div>
+
+            <div class="input-field col s11">
+              <%= f.label :new_password_confirmation %>
+              <%= f.password_field :password_confirmation, autocomplete: "off" %>
+            </div>
+
+            <div class="input-field col s11">
+              <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+              <%= f.password_field :current_password, autocomplete: "off" %>
+            </div>
+
+            <div class="right-align col s11">
+              <button class="btn waves-effect waves-light" type="submit" name="action">Update
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+          <% end %>
+        </div>
+
+        <div class='col s4'>
+        <br>
+
+          <h5 class='center-align'>Unhappy?</h5>
+          <br>
+          <%= link_to "Cancel my account", registration_path(resource_name), class: 'btn btn-block waves-effect waves-light right', data: { confirm: "Are you sure?" }, method: :delete %>
+          <br>
+          <br>
+          <p class='center-align'>This will delete your account and you will no longer be able to log in using your account.</p>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
