--- a/app/views/shared/_nav_foot.html.erb
+++ b/app/views/shared/_nav_foot.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">My Missionary Box</h5>
+        <h5 class="white-text">MissionCrate</h5>
         <p class="grey-text text-lighten-4">Add some rows and columns here later</p>
       </div>
       <div class="col l4 offset-l2 s12">
