--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -1,16 +1,17 @@
 <div class="navbar-fixed">
   <nav class="nav-extended navbar-color">
       <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">My Missionary Box</a>
-        <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="/" class="brand-logo">MissionCrate</a>
+        <a href="#" data-activates="mobile-nav" class="button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="register">Subscribe</a></li>
           <% if !user_signed_in? %>
             <li><%= link_to "Login", new_user_session_path %></li>
             <li><%= link_to "Sign Up", new_user_registration_path%></li>
           <% else %>
+            <li><%= fa_icon 'user-o' %>  <%= current_user.email %></li>
             <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
           <% end %>
-          <li><a href="register">Subscribe</a></li>
         </ul>
         <ul class="side-nav" id="mobile-nav">
         <% if !user_signed_in? %>
