--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,10 +11,30 @@
 		<h5 class='center-align'>What's In The Box</h5>
 		<p class='center-align'>Get four deluxe clothing samples and a surprise gift, all tailored to your personal profile, for our low monthly price.</p>
 		<div class='center-align'>
-		<%= link_to "Get Started", new_user_registration_path, class: 'home-btn-color btn waves-effect waves-light' %>
+		<%= link_to "Get Started", subscribe_path, class: 'home-btn-color btn waves-effect waves-light' %>
 		</div>
 		<br>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
+		<h1>hi</h1>
 	</div>
+
+<!-- 	<div id="subscribe">
+		<h5 class="center-align">Our monthly/weekly subscriptions</h5>
+		<p class="center-align">Some cool subscription</p>
+		<p class="center-align">Some cool subscription</p>
+		<p class="center-align">Some cool subscription</p>
+		<p class="center-align">Some cool subscription</p>
+	</div> -->
 
 	<div id="customize">
 		<h5 class='center-align'>Customize Your Box</h5>
