--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -4,7 +4,7 @@
         <a href="/" class="brand-logo">MissionCrate</a>
         <a href="#" data-activates="mobile-nav" class="button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="register">Subscribe</a></li>
+          <li><a href="subscribe">Subscribe</a></li>
           <% if !user_signed_in? %>
             <li><%= link_to "Login", new_user_session_path %></li>
             <li><%= link_to "Sign Up", new_user_registration_path%></li>
