--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -3,6 +3,6 @@
 <h3 class='center-align'>Welcome to the subscribe page</h3>
 
 <% Product.all.each do |n| %>
-<%= n.name %>
-<% "\n" %>
+<p><%= n.name %></p>
+<p><%= n.price.to_i %></p>
 <% end %>
