--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,12 +4,20 @@
 <br>
 <br>
 <div class="container">
+	  <div class="row">
 	<% @products.each do |product| %>
-	  <p><%= product.name %> | <%= number_to_currency product.price %>
+	  <div class="col s4">
+	  <p><%= product.name %></p>
+	  <p>Price: <%= number_to_currency product.price %></p>
 	  <%= form_for @order_item do |f| %>
 	    <%= f.hidden_field :product_id, value: product.id %>
-	    quantity: <%= f.number_field :quantity %>
-	    <%= f.submit "Add to cart", class: 'btn waves-effect waves-light', type: 'submit', name: 'action' %>
+	    <p>quantity: <%= f.select :quantity, options_for_select((1..10).collect {|s| ["#{s}", s]}, 1) %></p>
+	    <p><%= f.submit "Add to cart", class: 'btn', type: 'submit', name: 'action' %></p>
+    </div>
+	  </div>
 	  <% end %></p>
 	<% end %>
 </div>
+
+
+
