--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,8 +6,8 @@
 <div class="row">
 	<% @products.each do |product| %>
 		<div class="container center-align">
-    	<div class="col s4">
-      	<div class="card">
+    	<div class="col s6">
+      	<div class="card blue-grey darken-1 white-text">
 				  <p>
 				  	<%= product.name %>
 				  </p>
@@ -18,13 +18,13 @@
 
 		  		<%= form_for @order_item do |f| %>
 			    	<%= f.hidden_field :product_id, value: product.id %>
+ 
+			    	<div class="right-align">
+			    		Quantity: <%= f.select :quantity, options_for_select((1..10).collect {|s| ["#{s}", s]}, { include_blank: true }) %>		
+		    		</div>
 
-			    	<p class="center-align">
-			    		quantity: <%= f.select :quantity, options_for_select((1..10).collect {|s| ["#{s}", s]}, 1) %>		
-		    		</p>
-
-			    	<p class="center-align">
-			    		<%= f.submit "Add to cart", class: 'btn', type: 'submit', name: 'action' %>
+			    	<p class="right-align">
+			    		<%= f.submit "Add to cart", class: 'btn cart-btn', type: 'submit', name: 'action' %>
 		    		</p>
 
 	    	</div>
