--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,13 +6,15 @@
 <div class="row">
 	<% @products.each do |product| %>
 		<div class="container center-align">
-    	<div class="col s6">
+    	<div class="col s4">
       	<div class="card blue-grey darken-1 white-text">
-				  <p>
+				  <h5>
 				  	<%= product.name %>
-				  </p>
+				  </h5>
 
-		  		<p>
+				  <img class="responsive-img" src="assets/bluetie.jpg">
+
+		  		<p class="right-align">
 		  			Price: <%= number_to_currency product.price %>
 	  			</p>
 
