Added images to cart show page, as well as cart side nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,5 +116,15 @@ select {
 }
 
 .cart-btn {
-  margin: 7px;
+  margin: 5px;
+}
+
+.cart-img {
+  width: 175px;
+}
+
+.cart-img-sidebar {
+  width: 175px;
+  display: block;
+  margin: auto;
 }
