--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,39 +2,4 @@
 <br>
 <br>
 <br>
-<br>
-<div class="row">
-	<% @products.each do |product| %>
-		<div class="container center-align">
-    	<div class="col s4">
-      	<div class="card blue-grey darken-1 white-text">
-				  <h5>
-				  	<%= product.name %>
-				  </h5>
-
-				  <img class="responsive-img" src="assets/bluetie.jpg">
-
-		  		<p class="right-align">
-		  			Price: <%= number_to_currency product.price %>
-	  			</p>
-
-		  		<%= form_for @order_item do |f| %>
-			    	<%= f.hidden_field :product_id, value: product.id %>
- 
-			    	<div class="right-align">
-			    		Quantity: <%= f.select :quantity, options_for_select((1..10).collect {|s| ["#{s}", s]}, { include_blank: true }) %>		
-		    		</div>
-
-			    	<p class="right-align">
-			    		<%= f.submit "Add to cart", class: 'btn cart-btn', type: 'submit', name: 'action' %>
-		    		</p>
-
-	    	</div>
-  		</div>
-	  <% end %>
-  	</div>
-<% end %>
-</div>
-
-
-
+<%= render 'carts/page_cart' %>
