--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -9,6 +9,7 @@
 <% if @order_items.any? %>
   <% @order_items.each do |item| %>
     <h5><%= item.product.name %></h5>
+    <img class="cart-img" src="assets/bluetie.jpg">
     <p> Unit Price: <%= number_to_currency item.product.price %> | Quantity: <%= item.quantity %> | Total Price: <%= number_to_currency (item.product.price * item.quantity) %></p>
     <%= link_to "Delete", order_item_path(item), data: { confirm: "Are you sure?" }, method: :delete %>
   <% end %>
