Really fixed the vertical align for inline cart items on cart show page

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -25,7 +25,7 @@
 
       <div class="col l3">
         Quantity: <%= item.quantity %> |
-        <%= link_to "Remove", order_item_path(item), data: { confirm: "Are you sure?" }, method: :delete %>
+        <%= link_to "Remove", order_item_path(item), method: :delete %>
       </div>
       
       <div class="col l2">
