added image column to products table, adjusted seed data to include images, fixed partials to dynamically include seeded images

--- a/app/views/carts/_page_cart.html.erb
+++ b/app/views/carts/_page_cart.html.erb
@@ -7,7 +7,7 @@
 				  	<%= product.name %>
 				  </h5>
 
-				  <img class="responsive-img" src="assets/bluetie.jpg">
+				  <%= image_tag(product.image, class: 'responsive-img') %>
 
 		  		<p class="right-align">
 		  			Price: <%= number_to_currency product.price %>
