Added update button to cart show page

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -23,8 +23,14 @@
         Price: <%= number_to_currency item.product.price %>
       </div>
 
-      <div class="col l3">
-        Quantity: <%= item.quantity %> |
+      <div class="input-field col l3">
+        <div>
+        <%= form_for item do |f| %>
+          Quantity: <%= f.select :quantity, options_for_select((1..10).collect {|s| ["#{s}", s]}, { include_blank: true }) %>
+          <%= f.submit "Update", class: 'btn btn-cart-show', type: 'submit', name: 'action' %>
+        <% end %>
+        </div>
+            </p>
         <%= link_to "Remove", order_item_path(item), method: :delete %>
       </div>
       
