--- a/app/views/carts/_page_cart.html.erb
+++ b/app/views/carts/_page_cart.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<% @products.each do |product| %>
-		<div class="container center-align">
-    	<div class="col s6 l4">
+		<div class="center-align">
+    	<div class="col s6 l3">
       	<div class="card blue-grey darken-1 white-text">
 				  <h5>
 				  	<%= product.name %>
