--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -30,6 +30,7 @@
         <ul class="tabs tabs-transparent hide-on-small-only">
           <li class="tab"><%= link_to "What's Inside", root_path(anchor: "whats-inside") %></li>
           <li class="tab"><%= link_to "Customize", root_path(anchor: "customize") %></li>
+          <li class="tab"><%= link_to "Products", root_path(anchor: "products") %></li>
           <li class="tab"><%= link_to "About", root_path(anchor: "about-data") %></li>
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="small material-icons">shopping_cart</i></a>
         </ul>
