--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,6 +6,8 @@
     <div class="card blue-grey darken-1">
     	<div class="card-content white-text">
       	<div class="card-block">
+          <h5 class='center-align'>Not finished? <%= link_to "Continue Shopping", root_path('/#products'), class: 'btn' %></h5>
+          <hr>
 <% if @order_items.any? %>
   <% @order_items.each do |item| %>
     <div class="row valign-wrapper center-align">
