Made cart update button functional and updated style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,3 +140,9 @@ select {
 #half-size-hr {
   width: 50%;
 }
+
+input.quantity-cart {
+  width: 20%;
+  border: 1px solid white;
+  margin: 5px;
+}
