Fixed bug with cart totals

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -40,7 +40,7 @@
     </div>
   <% end %>
   <hr>
-  <p class="right-align">Cart Total: <%= number_to_currency current_order.total_price %></p>
+  <p class="right-align">Cart Total: <%= number_to_currency current_order.calculate_total %></p>
 <% else %>
   <p>Your shopping cart is empty.</p>
 <% end %>
