--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -22,12 +22,11 @@
       <div class="input-field col l8">
         <div>
         <%= form_for item do |f| %>
-          <%= f.select :quantity, options_for_select(
-          ["1 month subscription - #{number_to_currency item.product.price}",
-           "3 month subscription - #{number_to_currency item.product.price * 3}",
-           "6 month subscription - #{number_to_currency item.product.price * 6}",
-           "12 month subscription - #{number_to_currency item.product.price * 12}"],
-              "#{current_order}") %>
+          <%= f.select :quantity, [
+           ["1 month subscription - #{number_to_currency item.product.price}", 1],
+           ["3 month subscription - #{number_to_currency item.product.price * 3}", 3],
+           ["6 month subscription - #{number_to_currency item.product.price * 6}", 6],
+           ["12 month subscription - #{number_to_currency item.product.price * 12}", 12]] %>
           <%= f.submit "Update", class: 'btn btn-small cart-update-btn', type: 'submit', name: 'update' %>
         <% end %>
         <%= link_to "Remove", order_item_path(item), method: :delete, class: "float-right" %>
