--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -9,8 +9,7 @@
             <li><%= link_to "Login", new_user_session_path %></li>
             <li><%= link_to "Sign Up", new_user_registration_path%></li>
           <% else %>
-            <li><%= fa_icon 'user-o' %>  <%= current_user.email %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+            <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= fa_icon 'user-o' %>  <%= current_user.email %><i class="material-icons right">arrow_drop_down</i></a></li>
           <% end %>
         </ul>
         <ul class="side-nav" id="mobile-nav">
@@ -39,4 +38,10 @@
       </div>
   </nav>
 </div>
-</div>
+
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="#!">My Account</a></li>
+  <li><a href="#!">My Subscriptions</a></li>
+  <li class="divider"></li>
+  <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
+</ul>
