Javascript integration for user dropdown

--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
   <nav class="nav-extended navbar-color">
       <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">MissionCrate</a>
+        <a href="/" class="brand-logo">My Missionary Box</a>
         <a href="#" data-activates="mobile-nav" class="button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="subscribe">Subscribe</a></li>
@@ -39,9 +39,21 @@
   </nav>
 </div>
 
-<ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">My Account</a></li>
-  <li><a href="#!">My Subscriptions</a></li>
+<ul id="dropdown1" class="dropdown-content right-align">
+  <li class="left-align"><a href="/edit">My Account</a></li>
+  <li class="left-align"><a href="">Subscriptions</a></li>
   <li class="divider"></li>
   <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 </ul>
+
+<script>
+$(".dropdown-button").dropdown({
+      inDuration: 700,
+      outDuration: 250,
+      constrain_width: false, // Does not change width of dropdown to that of the activator
+      hover: false, // Activate on click
+      alignment: "left", // Aligns dropdown to left or right edge (works with constrain_width)
+      gutter: 0, // Spacing from edge
+      belowOrigin: true,
+    })
+</script>
