Removed customize in nav head and homepage

--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 	<div class="carousel hide-on-small-only">
 	  <a class="carousel-item" href="#"><img class="responsive-img" src="assets/ties4.jpg"></a>
 	  <a class="carousel-item" href="#"><img class="responsive-img" src="assets/ties5.jpg"></a>
@@ -17,4 +17,4 @@
 				    setTimeout(autoplay, 4500);
 				}
 	</script>
-</div>
+</div> -->
