--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <h5 class="center-align">Hello, <%= current_user.first_name %>! Check out our awesome deals for new customers!</h5>
   <% end %>
 
-		<%= render 'shared/carousel' %>
+<!-- 		<%= render 'shared/carousel' %> -->
 		<h5 class='center-align'>What's In The Box</h5>
 		<p class='center-align'>Get four deluxe clothing samples and a surprise gift, all tailored to your personal profile, for our low monthly price.</p>
 		<div class='center-align'>
@@ -23,12 +23,6 @@
 		<p class="center-align">Some cool subscription</p>
 		<p class="center-align">Some cool subscription</p>
 	</div> -->
-
-	<div id="customize">
-		<h5 class='center-align'>Customize Your Box</h5>
-		<p class='center-align'>Pick and choose from our selection!</p>
-		<p class='center-align'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
 
 	<div id="about-data">
 		<h5 class='center-align'>About</h5>
