--- a/app/views/carts/_page_cart.html.erb
+++ b/app/views/carts/_page_cart.html.erb
@@ -9,24 +9,18 @@
 
 				  <%= image_tag(product.image, class: 'responsive-img') %>
 
-		  		<p class="right-align">
-		  			Price: <%= number_to_currency product.price %>
-	  			</p>
-
 		  		<%= form_for @order_item do |f| %>
 			    	<%= f.hidden_field :product_id, value: product.id %>
  
-			    	<div class="right-align">
+			    	<div>
 			    		<%= f.select :quantity, [
            ["1 month subscription - #{number_to_currency product.price}", 1],
            ["3 month subscription - #{number_to_currency product.price * 3}", 3],
            ["6 month subscription - #{number_to_currency product.price * 6}", 6],
            ["12 month subscription - #{number_to_currency product.price * 12}", 12]] %>
-		    		</div>
 
-			    	<p class="right-align">
-			    		<%= f.submit "Subscribe", class: 'btn cart-btn', type: 'submit', name: 'action' %>
-		    		</p>
+			    		<%= f.submit "Subscribe", class: 'right btn cart-btn', type: 'submit', name: 'action' %>
+		    		</div>
 
 	    	</div>
   		</div>
