--- a/app/views/carts/_page_cart.html.erb
+++ b/app/views/carts/_page_cart.html.erb
@@ -19,7 +19,7 @@
            ["6 month subscription - #{number_to_currency product.price * 6}", 6],
            ["12 month subscription - #{number_to_currency product.price * 12}", 12]] %>
 
-			    		<%= f.submit "Subscribe", class: 'right btn cart-btn', type: 'submit', name: 'action' %>
+			    		<%= f.submit "Subscribe", class: 'btn cart-btn', type: 'submit', name: 'action' %>
 		    		</div>
 
 	    	</div>
