lots of style changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,20 @@ main {
   opacity: .75;
 }
 
+.user-dropdown {
+  background-color: #fff;
+  opacity: 1;
+}
+
+.wide-home-div {
+  background-color: grey;
+  width: 100%;
+}
+
+.padding-card {
+  padding: 20px 0px 20px 0px;
+}
+
 .page-footer {
   background-color: #000000;
   opacity: .5;
