--- a/app/views/shared/_nav_head.html.erb
+++ b/app/views/shared/_nav_head.html.erb
@@ -1,33 +1,33 @@
 <div class="navbar-fixed">
   <nav class="nav-extended navbar-color">
-      <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">My Missionary Box</a>
-        <a href="#" data-activates="mobile-nav" class="button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="subscribe">Subscribe</a></li>
-          <% if !user_signed_in? %>
-            <li><%= link_to "Login", new_user_session_path %></li>
-            <li><%= link_to "Sign Up", new_user_registration_path%></li>
-          <% else %>
-            <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><%= fa_icon 'user-o' %>  <%= current_user.email %><i class="material-icons right">arrow_drop_down</i></a></li>
-          <% end %>
-          <a href="#" data-activates="slide-out" class="button-collapse"><i class="small material-icons">shopping_cart</i></a>
-        </ul>
-        <ul class="side-nav" id="mobile-nav">
+    <div class="container nav-wrapper">
+      <a href="/" class="brand-logo">My Missionary Box</a>
+      <a href="#" data-activates="mobile-nav" class="button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="subscribe">Subscribe</a></li>
         <% if !user_signed_in? %>
           <li><%= link_to "Login", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path%></li>
+        <% else %>
+          <li><a class="dropdown-button" data-activates="dropdown1"><%= fa_icon 'user-o' %>  <%= current_user.email %><i class="material-icons right">arrow_drop_down</i></a></li>
         <% end %>
-          <li><a href="register">Subscribe</a></li>
-          <li><a href="#">Cart</a></li>
-          <li><a href="#">What's Inside</a></li>
-          <li><a href="#">About</a></li>
-        </ul>
-      </div>
+      </ul>
+          <li><a href="#" data-activates="slide-out" class="button-collapse"><i class="small material-icons">shopping_cart</i></a></li>
+      <ul class="side-nav" id="mobile-nav">
+      <% if !user_signed_in? %>
+        <li><%= link_to "Login", new_user_session_path %></li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      <% end %>
+        <li><a href="register">Subscribe</a></li>
+        <li><a href="#">Cart</a></li>
+        <li><a href="#">What's Inside</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
   </nav>
 </div>
 
-<ul id="dropdown1" class="dropdown-content right-align">
+<ul id="dropdown1" class="user-dropdown dropdown-content right-align">
   <li class="left-align"><a href="/edit">My Account</a></li>
   <li class="left-align"><a href="">Subscriptions</a></li>
   <li class="divider"></li>
