--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -29,7 +29,7 @@
            ["12 month subscription - #{number_to_currency item.product.price * 12}", 12]] %>
           <%= f.submit "Update", class: 'btn btn-small cart-update-btn', type: 'submit', name: 'update' %>
         <% end %>
-        <%= link_to "Remove", order_item_path(item), method: :delete, class: "float-right" %>
+        <%= link_to "Remove", order_item_path(item), method: :delete, data: { confirm:  "Are you sure?" }, class: "float-right" %>
         </div>
       </div>
       
